--- a/Senatwitter/Senatwitter/Senatwitter.csproj
+++ b/Senatwitter/Senatwitter/Senatwitter.csproj
@@ -75,6 +75,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\senatwitter.png" />
     <Content Include="Web.config" />
     <Content Include="HomePage.aspx" />
     <Content Include="WebForm2.aspx" />
